Fix issues with the run goal. Instead extend Deploy as it should really just be an extension that starts the server, then executes deployment.